@@ -2,6 +2,7 @@
 			     BZFlag release notes
 
 * add new updates here without heading until a release
+* [UN]SILENCE - Dave Brosius, Tim Riker
 * revert lag falling patch - Tim Riker, Dave Brosius
 * teamgrab.wav - Dave Brosius
 * improved texture mapping - unknown
